# Open-AutoGLM-Hybrid

./: .gitignore  ARCHITECTURE.md  DELIVERY_SUMMARY.md  GITHUB_BUILD_GUIDE.md  README.md
.github/workflows/: build-apk.yml
Open-AutoGLM-Hybrid/: README.md
Open-AutoGLM-Hybrid/docs/: DEPLOYMENT_GUIDE.md
Open-AutoGLM-Hybrid/reply-agent-service/: .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  config.py  docker-compose.yml  phone_controller.py  pyproject.toml  task_engine.py
Open-AutoGLM-Hybrid/reply-agent-service/knowledge_docs/: faq.md
Open-AutoGLM-Hybrid/reply-agent-service/knowledge_docs/policies/: return_policy.md  shipping_policy.md
Open-AutoGLM-Hybrid/reply-agent-service/knowledge_docs/products/: example_product.md
Open-AutoGLM-Hybrid/reply-agent-service/knowledge_docs/templates/: after_sales.md  bargain.md  greeting.md
Open-AutoGLM-Hybrid/reply-agent-service/routes/: admin.py  phone.py  task.py
Open-AutoGLM-Hybrid/reply-agent-service/skills/ecommerce-reply/: SKILL.md
Open-AutoGLM-Hybrid/reply-agent-service/static/: index.html  login.html
Open-AutoGLM-Hybrid/reply-agent-service/tools/: __init__.py  reply_toolkit.py
Open-AutoGLM-Hybrid/termux-scripts/: agent_api.py  ai_client.py  auto_reply.py  config.py  deploy.sh  main.py  phone_controller.py  requirements.txt
android-app/: build.gradle.kts
android-app/app/: build.gradle.kts
docs/: GITHUB_SIGNING_GUIDE.md
server/: README.md  agent.py  config.py  main.py  protocol.py  requirements.txt
termux-scripts/: deploy.sh  phone_controller.py
(+18 files in other folders)
